Fix broken style declaration

--- a/content/styles/ikenndac.scss
+++ b/content/styles/ikenndac.scss
@@ -262,7 +262,7 @@ div.footnotes::before {
 	}
 }
 
-#header #nav b, strong {
+#header #nav b, #header #nav strong {
 	color: white;
 }
 
